--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .content {
             padding: 20px;
 			font-size: 20px;
-            text-align: justify;
+            text-align: left;
         }
 		
 	.content2 ul li {
